# fastapi-auth

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  auth_routes.py  config.py  database.py  main.py  models.py  schemas.py  scripts.py
